Generation of the documentation
